[package]

name = "capnp-parser"
version = "0.19.0"
license = "MIT"
description = "Cap'n Proto code generation"
repository = "https://github.com/capnproto/capnproto-rust"
documentation = "https://docs.rs/capnp-parser/"
edition = "2021"

keywords = ["encoding", "protocol", "serialization"]

[dependencies]
winnow = "0.5.34"

[dependencies.capnp]
version = "0.19.0"
path = "../capnp"

[dev-dependencies]
expect-test = "1.4.1"

[lints]
workspace = true
